--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -14,3 +14,6 @@ div#wall .parent #tag-5.slick{
 #wall #tag-2 {
   display: none;
 }
+div#wall div.parent div:last-child div#tag-6{
+  display:none;
+}
